<resources>
    <string name="app_name">VocaDiary</string>
    <string name="action_settings">Settings</string>

    <string name="action_delete">Delete</string>

    <string name="add_word">Add a word</string>

    <string name="meaning">Meaning : </string>

    <string name="mnemonic">Mnemonic :</string>

    <string name="sentence">Sentence - </string>

    <string name="wordUnsaved">Word is not saved !</string>

    <string name="wordSaved">Word saved successfully</string>

    <string name="empty_view_title_text">NO words yet!</string>
    <string name="title_activity_indivisual_flashcard">indivisualFlashcard</string>
    <string name="title_activity_indivisual_word">IndivisualWord</string>

    <string name="tap_to_see">Tap to see meaning -> </string>

    <string name="known_word">I knew this word</string>

    <string name="unknown_word">I didn\'t know this word</string>
    <string name="open" />
    <string name="close" />
    <string name="sendOtp"> Send OTP</string>
    <string name="resendOtp"> Resend OTP</string>
    <string name="verifyOtp"> Verify OTP</string>
    <string name="submit"> Submit </string>
    <string name="register"> Register </string>
</resources>
