<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".AddWord">

    <!-- word  -->
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/add_word"
            style="@style/AddWordForm"/>

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_word"
                style="@style/EditorFieldStyle"
                android:inputType="textCapWords" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </LinearLayout>

    <!-- #meaning -->
    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/meaning"
            style="@style/AddWordForm"/>

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">


            <EditText
                android:id="@+id/edit_meaning"
                style="@style/EditorFieldStyle"
                android:inputType="textCapWords" />

            <!-- Gender drop-down spinner
            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>-->
        </LinearLayout>
    </LinearLayout>

    <!-- mnemonic -->
    <LinearLayout
        android:id="@+id/container_mnemonic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/mnemonic"
            style="@style/AddWordForm"/>

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Weight field -->
            <EditText
                android:id="@+id/edit_mnemonic"
                android:inputType="text"
                style="@style/EditorFieldStyle"/>
        </LinearLayout>
    </LinearLayout>

    <!-- sentence -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/container_sentence"
        android:orientation="horizontal">

        <TextView
            android:text="@string/sentence"
            style="@style/AddWordForm"/>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Weight field -->
            <EditText
                android:id="@+id/edit_sentence"
                android:inputType="text"
                style="@style/EditorFieldStyle"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
