<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".indivisualWord"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_flash"

        android:layout_margin="3dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/card_view_border">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:id="@+id/wordI"
                    android:textStyle="bold"
                    android:textSize="35dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="10dp"
                     />


                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/voice_card_flash"
                    android:src="@drawable/sound_icon"
                    android:backgroundTint="@color/background_secondary"

                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/flash_meaning"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/flash_mnemonic"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"/>

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tap_to_see"
                    android:text="@string/tap_to_see"
                    android:paddingTop="35dp"

                    android:textAlignment="center"
                />

                <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/knownWord"
                        android:padding="5dp"
                        android:text="@string/known_word"
                        android:textAlignment="center"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                    />


                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/unknownWord"
                        android:padding="5dp"
                        android:text="@string/unknown_word"
                        android:textAlignment="center"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"

                       />
                </LinearLayout>
            </RelativeLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>