<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".signInPage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SignIN"
        android:id="@+id/signIn"
        android:textColor="@color/background_secondary"
        android:textSize="35dp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        android:layout_below="@id/signIn"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="20dp"
        android:hint="Phone Number"
        android:textColorHint="@color/background_secondary"
        android:textColor="@color/colorPrimaryDark"
        android:layout_margin="10dp"
        android:padding="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/otp"
        android:layout_below="@id/phone"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/pass"
        android:drawablePadding="20dp"
        android:hint="Enter OTP"
        android:textColorHint="@color/background_secondary"
        android:textColor="@color/secondary_text"
        android:layout_margin="10dp"
        android:padding="20dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendOtp"
        android:id="@+id/sendOtp"
        android:layout_below="@id/otp"
        android:background="@color/background_secondary"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:visibility="visible"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resendOtp"
        android:id="@+id/resendOtp"
        android:layout_margin="10dp"
        android:layout_below="@id/sendOtp"
        android:background="@color/background_secondary"
        android:padding="20dp"
        android:visibility="gone"
        />


    <!--<EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_below="@id/signIn"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="20dp"
        android:hint="Username"
        android:textColorHint="@color/background_secondary"
        android:textColor="@color/secondary_text"
        android:layout_margin="10dp"
        android:padding="20dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@id/username"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/pass"
        android:drawablePadding="20dp"
        android:hint="Password"
        android:textColorHint="@color/background_secondary"
        android:textColor="@color/secondary_text"
        android:layout_margin="10dp"
        android:padding="20dp"
        />-->


    <Button
        android:id="@+id/verifyOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sendOtp"
        android:layout_marginStart="115dp"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/resendOtp"
        android:layout_toRightOf="@id/resendOtp"
        android:background="@color/background_secondary"
        android:padding="20dp"
        android:text="@string/verifyOtp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/signInWithEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/verifyOtp"
        android:layout_marginTop="150dp"
        android:textSize="25dp"
        android:layout_marginLeft="10dp"
        android:paddingTop="30dp"
        android:paddingBottom="20dp"
        android:layout_marginBottom="30dp"
        android:text="Sign in with email-passsword"
        android:textColor="@color/background_secondary"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/others"
        android:text="Or sign in with"
        android:textSize="17dp"
        android:layout_above="@id/socialIcons"
        android:textColor="@color/background_secondary"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/socialIcons"
        android:gravity="center">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:id="@+id/googleBtn"
            android:src="@drawable/google"
            />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/fb"
            />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/twitter"
            />
    </LinearLayout>
</RelativeLayout>